add: redis persist, api endpoints, crud of targets

--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "dotenv": "^8.2.0",
     "healthpoint": "^1.0.0",
     "http-hash-router": "^2.0.1",
+    "http-methods": "^1.1.0",
     "productionize": "^4.1.0",
     "redis": "^3.0.2",
     "req-logger": "^2.0.0",
-    "send-data": "^8.0.0"
+    "send-data": "^8.0.0",
+    "uuidv4": "^6.2.11"
   },
   "repository": {
     "type": "git",
